@@ -71,7 +71,7 @@ public class ZipLongTest {
         assertTrue("symmetric", zl2.equals(zl));
 
         assertTrue("null handling", !zl.equals(null));
-        assertTrue("non ZipLong handling", !zl.equals(new Integer(0x1234)));
+        assertTrue("non ZipLong handling", !zl.equals(Integer.valueOf(0x1234)));
     }
 
     /**
@@ -79,8 +79,8 @@ public class ZipLongTest {
      */
     @Test
     public void testSign() {
-        ZipLong zl = new ZipLong(new byte[] {(byte)0xFF, (byte)0xFF, (byte)0xFF, (byte)0xFF});
-        assertEquals(0x00000000FFFFFFFFl, zl.getValue());
+        ZipLong zl = new ZipLong(new byte[] {(byte) 0xFF, (byte) 0xFF, (byte) 0xFF, (byte) 0xFF});
+        assertEquals(0x00000000FFFFFFFFL, zl.getValue());
     }
 
     @Test
